// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css createStyls 1`] = `
<html>
  <head />
  <body>
    <style
      data-styil="abc"
      nonce="123456"
    >
      
      .css-2883881200{width:auto;}
    </style>
  </body>
</html>
`;

exports[`css createStyls speedy 1`] = `
<html>
  <head>
    <style
      data-styil="css"
    >
      
    </style>
  </head>
  <body>
    <style
      data-styil="abc"
      nonce="123456"
    >
      
      .css-2883881200{width:auto;}
    </style>
  </body>
</html>
`;
